auth/keycloak/networking.yaml

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - 'auth.darmanin.info'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - 'auth.darmanin.info'
    tls:
      mode: SIMPLE
      credentialName: keycloak-cert-production

---
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-http
  namespace: keycloak
spec:
  hosts:
  - "auth.darmanin.info"
  gateways:
  - keycloak-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: keycloak-http
        port:
          number: 80
