auth/keycloak/auth.yaml
################################
# oAuth2 - Proxy Service
# @Name : oauth2-proxy-service
#################################
# 💬 Expose oauth2-proxy app
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: sniphub
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: http
    port: 4180
---
################################
# oAuth2 - Proxy Deployment 
# @Name : oauth2-proxy
#################################
# 💬 All parameters found in spec.template.spec.args can be found on the link below
# 💬 https://oauth2-proxy.github.io/oauth2-proxy/docs/6.1.x/configuration/overview
# 💬 The proxy is deployed in the same namespace as the application
# 💬 To be able to be used as a provider, this proxy has to be declared in the 'isitio' configmap within the namespace 'istio-system'
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: sniphub
spec:
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: bitnami/oauth2-proxy:7.3.0
        args:
        - --provider=oidc
        - --provider-display-name="Keycloak"
        - --email-domain=*
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --set-authorization-header=true
        # - --set-xauthrequest=true
        - --skip-jwt-bearer-tokens=true
        - --redirect-url=https://sniphub.darmanin.info/oauth2/callback
        - --oidc-issuer-url=https://auth.darmanin.info/auth/realms/sniphub
        - --login-url=https://auth.darmanin.info/auth/realms/sniphub/protocol/openid-connect/auth
        - --redeem-url=https://auth.darmanin.info/auth/realms/sniphub/protocol/openid-connect/token
        - --validate-url=https://auth.darmanin.info/auth/realms/sniphub/protocol/openid-connect/userinfo
        - --http-address=0.0.0.0:4180
        - --cookie-expire=4h0m0s        
        - --cookie-refresh=0h2m0s
        - --cookie-secure=false
        - --whitelist-domain=".darmanin.info"
        - --cookie-domain=".darmanin.info"
        - --standard-logging=true
        - --auth-logging=true
        - --request-logging=true
        - --skip-provider-button=true
        - --upstream=static://200
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
        ports:
        - containerPort: 4180
          protocol: TCP
        # readinessProbe:
        #   periodSeconds: 3
        #   httpGet:
        #     path: /ping
        #     port: 4180
# ---



---
################################
# Request Authentication
# @Name : req-auth-for-all
#################################
# 💬 https://istio.io/latest/docs/reference/config/security/request_authentication/
# 💬 All pods with a label 'auth : maia' will use this jwtRules 
# 💬 'outputPayloadToHeader' and 'forwardOriginalToken' allow maia apps to read data from the x-id-token
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: snip-request-auth
  namespace: sniphub
spec:
  selector: 
    matchLabels:
      snip-auth: "true"
  jwtRules:  
  - issuer: "https://auth.darmanin.info/auth/realms/sniphub"
    jwksUri: "https://auth.darmanin.info/auth/realms/sniphub/protocol/openid-connect/certs"
    forwardOriginalToken: true
    outputPayloadToHeader: x-id-token


---
################################
# Authorization Policy
# @Name : istio-ingressgateway-auth
#################################   
# 💬 https://istio.io/latest/docs/reference/config/security/authorization-policy/
# 💬 Uses the oauth2 provider build before (the name set in istio config map)

apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: auth-policy-front
  namespace: sniphub
spec:
  selector:
    matchLabels:
      snip-auth: "true"
  action: CUSTOM
  provider:
    name: oauth2-proxy
  rules:
    - {}

---
